# agents-at-scale-ark

./: .all-contributorsrc  .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  SDD.md  devspace.yaml  helpers.mk  test_langfuse_trace.py
.github/: CHANGELOG.md  CODEOWNERS  release-please-config.json  release-please-manifest.json
.github/workflows/: cicd.yaml  deploy.yml
ark/: Dockerfile.airgap  Makefile  go.mod  go.sum
ark/cmd/: main.go
ark/scripts/: validate-chart-crds.sh
charts/ark-tenant/: Chart.yaml
docs/: .gitignore  langfuse-ark-integration.md  langfuse-components-diagram.md  langfuse-quick-reference.md  package-lock.json  package.json
docs/content/: _meta.js  index.mdx  quickstart.mdx
docs/diagrams/: ARK_architecture.drawio
docs/public/: contributors.html
docs/scripts/: copy-marketplace-content.js
images/: images.mk
images/ark-tools/: .dockerignore  Dockerfile  README.md  USAGE.md  build.mk
lib/ark-sdk/: pyproject.toml
marketplace/: .gitignore  README.md
marketplace/docs/: .gitignore  README.md  mdx-components.js  next.config.mjs  package.json
mcp/filesystem-mcp/: Dockerfile  Dockerfile.airgap  Makefile  README.md  build.sh  devspace.yaml  package-lock.json  package.json  tsconfig.json
samples/agents/: filesystem.yaml
samples/mocks/: mock-llm.yaml
samples/quickstart/: filesys.yaml  openai-model.yaml
samples/walkthrough/: README.md
scripts/: README-airgap-images.md  build-airgap-images.sh  build-and-push.sh  deploy-kind-0.1.41.sh  quickstart.sh
scripts/deploy/: bind-deployer-role.sh  transfer-ark-containers.sh
services/argo-workflows/: README.md  devspace.yaml
services/ark-api/: Dockerfile.airgap
services/ark-api-a2a/: Dockerfile.airgap
services/ark-cluster-memory/: Dockerfile.airgap
services/ark-dashboard/: Dockerfile.airgap
services/ark-evaluator/: Dockerfile.airgap  README.md  build.mk  pyproject.toml
services/ark-mcp/: Dockerfile.airgap
services/executor-langchain/: Dockerfile.airgap  pyproject.toml  sync-ark-sdk.sh
services/executor-langchain/chart/: Chart.yaml
services/executor-langchain/src/langchain_executor/: executor.py  utils.py
services/phoenix/: Makefile  README.md  build.mk
tests/a2a-agent-discovery/: chainsaw-test.yaml
tests/a2a-blocking-task-completed/: chainsaw-test.yaml
(+531 files in other folders)
